# arc_robot_arm

./: .gitignore  .gitmodules  README.md  robot_arm_environment.yml  setup_constructsim.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: catkin_test.yml  lint.yml  pyflakes.yml
arc_6dof_robot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arc_6dof_robot_arm_moveit_config/config/: fake_controllers.yaml  mvp_arm_v2_sim.srdf  ompl_planning.yaml  ros_controllers.yaml
arc_6dof_robot_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  warehouse.launch  (+9 more)
arc_robot_arm/: CMakeLists.txt  package.xml
arc_robot_arm/include/arc_robot_arm/: kinematics.h
arc_robot_arm/launch/: 6dof.launch  arduino.launch  arm_setup.launch  camera.launch  robot.launch  rviz.launch  rviz_gazebo.launch
arc_robot_arm/models/kingB/: kingB.sdf
arc_robot_arm/models/knightB1/: knightB1.sdf
arc_robot_arm/models/pawnB3/: pawnB3.sdf
arc_robot_arm/models/pawnW5/: pawnW5.sdf
arc_robot_arm/models/pawnW7/: pawnW7.sdf
arc_robot_arm/models/queenB/: queenB.sdf
arc_robot_arm/models/towerW2/: towerW2.sdf
arc_robot_arm/moveit_arduino/moveit_arduino/: moveit_arduino.ino
arc_robot_arm/moveit_arduino/moveit_arduino/moveit_arduino_4dof/: moveit_arduino_4dof.ino
arc_robot_arm/moveit_arduino/moveit_arduino_4dof/: .moveit_arduino_4dof.ino.swo  .moveit_arduino_4dof.ino.swp  moveit_arduino_4dof.ino
arc_robot_arm/moveit_arduino/moveit_arduino_6dof/: moveit_arduino_6dof.ino
arc_robot_arm/nodes/: IK_matlab.py  RobotArmPathPlanner  arc_robot_arm_urdf.urdf  client_ik.py  ikine_4dof_solver.py  pick_and_place.py  robot_arm_path_planner.py
arc_robot_arm/scripts/: Inverse_Kinematics.m  client_ik.py  gripper_distance_analysis.m  ikine_4dof_solver.py  pick_and_place.py  robot_arm_path_planner.py  server_ik.py
arc_robot_arm/src/: ArduinoHardware.h
arc_robot_arm/src/arduino/: uart_ros_setup_instructions.txt
arc_robot_arm/src/arduino/moveit_arduino_4dof/: moveit_arduino_4dof.ino
arc_robot_arm/src/arduino/moveit_arduino_6dof/moveit_arduino_6dof_v2/: ArduinoHardware.h  moveit_arduino_6dof_v2.ino  ros.h
arc_robot_arm/src/arduino/test_dynamixel_servo/: test_dynamixel_servo.ino
arc_robot_arm/src/arduino/test_dynamixel_servo_no_ros/: test_dynamixel_servo_no_ros.ino
arc_robot_arm/src/camera/camera_info/: camera.yaml
arc_robot_arm/src/camera/utils/: dataset_generator.py  extractor.py  pick_detector.py
arc_robot_arm/src/kinematics/: kinematics.cpp  move_to.cpp  move_to_pose_node.cpp  robot_arm_path_planner.py  test_kinematics  test_kinematics.cpp  test_kinematics.txt
arc_robot_arm/src/kinematics/Other/: .custom_solver.cpp.swp  kinematics_test.py
arc_robot_arm/src/tf/: sensors_tf_broadcaster.cpp
arc_robot_arm/src/vision/: README.md  requirements.txt
arc_robot_arm/src/vision/datasets/: README.md  README.txt  extractor.py
arc_robot_arm/src/vision/utils/: dataset_generator.py  extractor.py
arc_robot_arm/urdf/: arm_with_camera.xacro
arc_robot_arm/worlds/: chessboard.world  test_visual_servoing.world
arc_robot_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
arc_robot_arm_urdf_description/: CMakeLists.txt  package.xml
arc_robot_arm_visual_servoing/: CMakeLists.txt  package.xml
arc_robot_arm_visual_servoing/launch/: visual_servoing.launch
arc_robot_arm_visual_servoing/src/: depth_image_processing.py  ibvs_node.cpp  vs_node
arc_robot_arm_visual_servoing/src/tools/: color_detection.py  depth_image_processing.py
arm_config/: CMakeLists.txt  package.xml
arm_control/: CMakeLists.txt  package.xml
arm_description/: package.xml
arm_launch/: CMakeLists.txt  package.xml
chess_piece_detector/: CMakeLists.txt  README.md  package.xml
chessboard_detection/: CMakeLists.txt  package.xml
chessboard_gazebo/: CMakeLists.txt  README.md  package.xml
chessboard_perception/: CMakeLists.txt  package.xml
mvp_arm_4dof_description/: CMakeLists.txt  package.xml
mvp_arm_4dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mvp_arm_4dof_v2_1_description/: CMakeLists.txt  package.xml
mvp_arm_4dof_v2_description/: CMakeLists.txt  package.xml
mvp_arm_6dof_description/: CMakeLists.txt  package.xml
mvp_arm_6dof_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mvp_arm_6dof_v2_description/: CMakeLists.txt  package.xml
mvp_arm_6dof_v2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mvp_arm_6dof_v4_description/: CMakeLists.txt  package.xml
mvp_arm_6dof_v4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mvp_arm_kinematics_plugin/: CMakeLists.txt  mvp_arm_kinematics_plugin.xml  package.xml
mvp_arm_kinematics_plugin/include/mvp_arm_kinematics_plugin/: inverse_kinematics_5dof.h  mvp_arm_kinematics_plugin.h
mvp_arm_kinematics_plugin/src/: a.out  inverse_kinematics_5dof.cpp  mvp_arm_kinematics_plugin.cpp
mvp_arm_kinematics_plugin/test/: test_kinematics.test  test_mvp_arm_kinematics_plugin.cpp
mvp_arm_v1_sim_1_description/: CMakeLists.txt  package.xml
mvp_arm_v2_sim_description/: CMakeLists.txt  package.xml
protoarm_bringup/: CMakeLists.txt  README.md  package.xml
protoarm_control/: CMakeLists.txt  package.xml
protoarm_deprec_moveit_config/: .setup_assistant  CMakeLists.txt
protoarm_description/: CMakeLists.txt  package.xml
protoarm_driver/: CMakeLists.txt  README.md  package.xml
protoarm_gazebo/: CMakeLists.txt  package.xml
protoarm_hw/: CMakeLists.txt  package.xml
protoarm_kinematics/: CMakeLists.txt  README.md  package.xml
protoarm_kinematics/include/protoarm_kinematics/: kinematics.h
protoarm_kinematics/launch/: kinematics.launch
protoarm_kinematics/src/: kinematics.cpp  move_to.cpp  test_kinematics  test_kinematics.cpp  test_move_to_joint_state.txt
protoarm_moveit_config/: .setup_assistant  package.xml
protoarm_visual_servoing/: CMakeLists.txt  package.xml
robot_arm_urdf_v1_description/: CMakeLists.txt  package.xml
(+548 files in other folders)
